# python-project-lvl2

./: .coverage  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml
gendiff/: __init__.py  file_builder.py  generator.py  parser.py
gendiff/formatters/: render.py  render_json.py  render_plain.py  render_string.py  render_yml.py
gendiff/renders/: render.py  render_plain.py  render_yml.py
gendiff/scripts/: gendiff.py
tests/: expected.py  read_correct_file.py  test_json.py  test_plain.py  test_yml.py
tests/expected/json/: complex.json  simple.json
tests/expected/string/: complex.txt
tests/expected/yml/: complex.yml  simple.yml
